# weather

./: .gitignore  NOTES.txt  README.md  _quarto-pdf.yml  _quarto-slides.yml  _quarto-website.yml  _quarto.yml  _variables.yml  about.qmd  environment.yaml  environment.yml  generate_briefing.sh  goes.py  index.qmd  integrated_column_watervapor_map_plots.py  path_meta.lua  render_quarto.sh  wbcli.sh
src/: _generate_variables_yaml.py  briefing_template.qmd  create_briefing_folder.py  create_variables_yaml_file.py  pyproject.toml  render_quarto.sh
src/wbapi/: __init__.py  generate_images.py  generate_variables_yaml_file.py
src/wblib/: __init__.py  main.py  pyproject.toml  setup.py  template.qmd
src/wblib/api/: _logger.py  _utils.py  api.py  check_status.py  directory.py  figures.py  images.py  make_directory.py  make_images.py  make_variables_file.py  status.py  variables_file.py
src/wblib/figures/: briefing_info.py  flighttrack.py  healpy_utils.py  hifs.py  integrated_column_watervapor_map_plots.py  meteor_pos.py  sattrack.py
src/wblib/flights/: HALO_20240811a.py  HALO_20240813a.py  HALO_20240816a.py  HALO_20240818a.py  HALO_20240821a.py  HALO_20240822a.py  HALO_20240825a.py  HALO_20240827a.py  HALO_20240829a.py  HALO_20240831a.py  HALO_20240903a.py  HALO_20240905a.py  HALO_20240907a.py  HALO_20240909a.py  HALO_20240912a.py  HALO_20240914a.py  HALO_20240916a.py  HALO_20240919a.py  HALO_20240921a.py  HALO_20240923a.py  HALO_20240924a.py  HALO_20240926a.py  HALO_20240928a.py  _define_flights.py  flighttrack.py
src/wblib/services/: __init__.py  _define_figures.py  (+6 more)
(+162 files in other folders)
